--- a/exercícios/ex022/fundo004.html
+++ b/exercícios/ex022/fundo004.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Posicinamento</title>
-    <style></style>
+    <style>
+        body{
+            height: 100vh;
+            background-color: black;
+            background-image: url(imagens/wallpaper002.jpg);
+            background-position: center center;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+
+        main{
+            background-color: white;
+            width: 300px;
+            margin: auto;
+            padding: 10px;
+            border: 1px solid blue;
+            border-radius: 15px;
+        }
+    </style>
 </head>
 <body>
-    
+    <main>
+        <h1>Teste de imagem</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim optio cupiditate aut asperiores odit animi facilis ab totam! Veniam illo, perspiciatis distinctio itaque delectus voluptate culpa officia consequuntur ex soluta. Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo eaque adipisci nulla sapiente animi quibusdam, id asperiores incidunt magnam, earum, laboriosam inventore repudiandae tenetur deleniti nesciunt soluta ullam aut atque! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla excepturi quisquam a adipisci enim magni, ipsum blanditiis ut debitis dignissimos maxime sequi temporibus! Sed modi necessitatibus autem adipisci consequuntur voluptatum!</p>
+    </main>
 </body>
 </html>
