--- a/exercícios/ex001/index.html
+++ b/exercícios/ex001/index.html
@@ -5,19 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu primeiro execício</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <style>
-        body{
-            color: rgb(247, 247, 192);
-            background: rgb(152, 12, 199);
-            text-align: center; 
-            font: normal 18pt arial;  
-        }
-    </style>
-  <h1>Ádila A velhinha</h1>
-  <hr>
-  <p>Era uma vez uma velhinha chamada Ádila, ela sempre dizia que o seu amigo lindo dela era idoso quando ela que era dona do lendario capote de velhinha</p>  
-  <p>Te amo viu velhinhakkkk</p>
+      <main>
+          <h1>Ádila A velhinha</h1>
+          <hr>
+          <p>Era uma vez uma velhinha chamada Ádila, ela sempre dizia que seu namorado lindo era idoso quando ela que era a dona do lendario capote de velhinha</p>
+          <p>Te amo tá minha velhinha kkkk</p>
+      </main>
 </body>
 </html>
