--- a/exercícios/ex023/tabela003.html
+++ b/exercícios/ex023/tabela003.html
@@ -30,6 +30,10 @@
             color: white;
         }
 
+        tbody > tr:nth-child(2n){
+            background-color: gray;
+        }
+
         .num{
             text-align: right;
         }
